[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy-wrapper"
version = "0.1.0"
description = "A privacy wrapper for LLMs to mask sensitive data"
authors = [
    { name="Tereza Saskova", email="tercasaskova311@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["LLM", "privacy", "masking", "text"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/tercasaskova311/LLM_privacy_wrapper"
